--- a/recursion.ipynb
+++ b/recursion.ipynb
@@ -83,6 +83,96 @@
     "fib(6)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sum of Digits Using Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def digit(n):\n",
+    "    assert n>=0 and int(n) ==n, 'The number must be positive integer only'\n",
+    "    if n<10:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return digit(int(n/10)) + n%10\n",
+    "\n",
+    "digit(11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Power using recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pow(base, exponent):\n",
+    "    assert exponent>=0 and int(exponent) ==exponent, 'The number must be positive integer only'\n",
+    "    if exponent == 1:\n",
+    "        return base\n",
+    "    if exponent == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return base * pow(base, exponent-1)\n",
+    "\n",
+    "pow(3,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4**5"
+   ]
   }
  ],
  "metadata": {
