--- a/Array_list.ipynb
+++ b/Array_list.ipynb
@@ -108,6 +108,13 @@
     "\n",
     "print(f\"The pairs of integers are {pair}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Max Product of two int"
+   ]
   }
  ],
  "metadata": {
