--- a/Array_list.ipynb
+++ b/Array_list.ipynb
@@ -115,15 +115,92 @@
    "source": [
     "# Max Product of two int"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "def find_max_product(arr):\n",
+    "    prod_final = 0\n",
+    "    for i in array:\n",
+    "        for j in array:\n",
+    "            prod = i* j\n",
+    "            if prod > prod_final and i!=j:\n",
+    "                prod_final = prod\n",
+    "    return prod_final\n",
+    "\n",
+    "prod = find_max_product(array)\n",
+    "print(prod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implement an algorithm to determine if all elements in the list has unique characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The array has 4 and the duplicates are [3, 5, 6, 88]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [1,2,3,5,6,8,9,10,11,12,13,14, 56, 34, 3,5,6,88,7,88]\n",
+    "\n",
+    "def unique(arr):\n",
+    "    dupli = []\n",
+    "    for i, val in enumerate(myList):\n",
+    "        for j, value in enumerate(myList):\n",
+    "            if i!=j and val==value and val not in dupli:\n",
+    "                dupli.append(val)\n",
+    "    return dupli\n",
+    "\n",
+    "array = unique(myList)\n",
+    "print(f\"The array has {len(array)} duplicates and the duplicates are {array}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check if two lists are a permutation of each other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "03b071932e2ff43920a70a906a312164fca232c09f90383ed69a0680014bf05a"
+   "hash": "2b98e5309e6e3b0bade2ed4a1aa225e8ff7275f11bed2b4c0572310c8cf94ab4"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -136,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
