--- a/Array_list.ipynb
+++ b/Array_list.ipynb
@@ -189,10 +189,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def permutation(list1, list2):\n",
+    "    perm = False\n",
+    "    if len(list1) != len(list2):\n",
+    "        return perm\n",
+    "    list1.sort()\n",
+    "    list2.sort()\n",
+    "    \n",
+    "    if list1 == list2:\n",
+    "        return True \n",
+    "    else:\n",
+    "        return False \n",
+    "\n",
+    "perm = permutation([\"may\", \"hello\", \"from\", \"the\"], [\"hello\", \"may\",  \"from\",  \"the\"])\n",
+    "print(perm)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rotate an n by n matrix by 90 degrees\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9 9 1]\n",
+      " [9 1 9]\n",
+      " [9 3 7]] [[9. 9. 9.]\n",
+      " [3. 1. 9.]\n",
+      " [7. 9. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "def rotate(matrix):\n",
+    "    m = matrix.shape[0]\n",
+    "    n = matrix.shape[1]\n",
+    "    transpose = np.transpose(matrix)\n",
+    "    eye = np.eye(m)[::-1]\n",
+    "    rot = np.dot(transpose, eye)\n",
+    "    return rot\n",
+    "\n",
+    "mat = np.random.randint(10,size=(3,3))\n",
+    "rot = rotate(mat)\n",
+    "print(mat, rot)"
+   ]
   }
  ],
  "metadata": {
