--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,10 @@
       "4\n",
       "1\n",
       "6\n",
-      "The value does not exist in this list\n"
+      "The value does not exist in this list\n",
+      "4\n",
+      "1\n",
+      "The singly Linked List does not exist\n"
      ]
     }
    ],
@@ -86,6 +89,51 @@
     "                    return node.value\n",
     "                node = node.next\n",
     "            return \"The value does not exist in this list\"\n",
+    "    \n",
+    "    # delete a node from a singly linked list \n",
+    "    def deleteNode(self, location):\n",
+    "        if self.head is None:\n",
+    "            print(\"The SLL does not exist\")\n",
+    "        else:\n",
+    "            if location ==0:\n",
+    "                if self.head == self.tail:\n",
+    "                    self.head = None\n",
+    "                    self.tail = None\n",
+    "                else:\n",
+    "                    self.head = self.head.next\n",
+    "            elif location == -1:\n",
+    "                if self.head == self.tail:\n",
+    "                    self.head = None\n",
+    "                    self.tail = None\n",
+    "                else:\n",
+    "                    node = self.head\n",
+    "                    while node is not None:\n",
+    "                        if node.next == self.tail:\n",
+    "                            break\n",
+    "                        node = node.next\n",
+    "                    node.next = None \n",
+    "                    self.tail = node \n",
+    "            \n",
+    "            else:\n",
+    "                tempNode = self.head \n",
+    "                index = 0 \n",
+    "                while index < location -1:\n",
+    "                    tempNode = tempNode.next\n",
+    "                    index += 1\n",
+    "                nextNode = tempNode.next\n",
+    "                tempNode.next = nextNode.next \n",
+    "    \n",
+    "    # delete entire SLL\n",
+    "    def deleteEntireSLL(self):\n",
+    "        if self.head is None:\n",
+    "            print(\"The SLL does not exit\")\n",
+    "        else:\n",
+    "            self.head=None \n",
+    "            self.tail = None \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "singlyLinkedList = SLinkedList()\n",
     "singlyLinkedList.insertSLL(1,-1)\n",
@@ -97,7 +145,127 @@
     "singlyLinkedList.traverseSLL()\n",
     "print(singlyLinkedList.searchSLL(40))\n",
     "\n",
+    "singlyLinkedList.deleteNode(2)\n",
+    "singlyLinkedList.traverseSLL()\n",
+    "\n",
+    "singlyLinkedList.deleteEntireSLL()\n",
+    "singlyLinkedList.traverseSLL()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interview Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 -> 5 -> 4 -> 1 -> 4 -> 3 -> 1 -> 0 -> 0 -> 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import  randint\n",
+    "class Node:\n",
+    "    def __init__(self, value=None):\n",
+    "        self.value = value\n",
+    "        self.next = None \n",
+    "        self.prev = None\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return str(self.value)\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self, values=None):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    def __iter__(self):\n",
+    "        curNode = self.head\n",
+    "        while curNode:\n",
+    "            yield curNode \n",
+    "            curNode = curNode.next\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        values = [str(x.value) for x in self]\n",
+    "        return ' -> '.join(values)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        result = 0\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            result += 1 \n",
+    "            node = node.next\n",
+    "        return result \n",
+    "\n",
+    "    def add(self, value):\n",
+    "        if self.head is None:\n",
+    "            newNode = Node(value)\n",
+    "            self.head = newNode\n",
+    "            self.tail = newNode\n",
+    "        else:\n",
+    "            self.tail.next = Node(value)\n",
+    "            self.tail = self.tail.next\n",
+    "        return self.tail\n",
+    "\n",
+    "    def generate(self, n, min_value, max_value):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "        for i in range(n):\n",
+    "            self.add(randint(min_value, max_value))\n",
+    "        return self \n",
+    "\n",
+    "\n",
+    "customLL = LinkedList()\n",
+    "customLL.generate(10,0,5)\n",
+    "print(customLL)\n",
+    "len(customLL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove Duplicates of linkedlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeDups(ll):\n",
+    "    if ll.head is None:\n",
+    "        return \n",
+    "    else:\n",
+    "        currentNode = ll.head\n",
+    "        visited = set([currentNode.value])\n",
+    "        while currentNode.next:\n",
+    "            if currentNode.next.value in visited:\n",
+    "                currentNode.next = currentNode.next.next \n",
+    "            else:\n",
+    "                visited.add(currentNode.next.value)\n",
+    "                currentNode = currentNode.next\n",
+    "        return ll\n"
    ]
   },
   {
