--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -162,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 -> 5 -> 4 -> 1 -> 4 -> 3 -> 1 -> 0 -> 0 -> 4\n"
+      "0 -> 4 -> 0 -> 2 -> 3 -> 1 -> 3 -> 1 -> 2 -> 5\n"
      ]
     },
     {
@@ -178,7 +178,7 @@
        "10"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,9 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 -> 0 -> 4 -> 2 -> 1 -> 0 -> 1 -> 4 -> 3 -> 5\n",
+      "2 -> 0 -> 4 -> 1 -> 3 -> 5\n"
+     ]
+    }
+   ],
    "source": [
     "def removeDups(ll):\n",
     "    if ll.head is None:\n",
@@ -265,8 +274,78 @@
     "            else:\n",
     "                visited.add(currentNode.next.value)\n",
     "                currentNode = currentNode.next\n",
-    "        return ll\n"
+    "        return ll\n",
+    "\n",
+    "ll = LinkedList()\n",
+    "ll.generate(10,0,5)\n",
+    "print(ll)\n",
+    "removeDups(ll)\n",
+    "print(ll)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Return kth from last "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 -> 2 -> 2 -> 7 -> 1 -> 10 -> 6 -> 10 -> 1 -> 8 -> 3 -> 3 -> 0 -> 1 -> 6 -> 3 -> 10 -> 7 -> 7 -> 4 -> 3 -> 0 -> 6 -> 5 -> 9 -> 4 -> 3 -> 9 -> 8 -> 0 -> 10 -> 0 -> 0 -> 9 -> 4 -> 0 -> 9 -> 2 -> 6 -> 7 -> 5 -> 7 -> 6 -> 4 -> 9 -> 3 -> 8 -> 4 -> 1 -> 1\n",
+      "Node 49 with value 1 is the 2th value from the end\n"
+     ]
+    }
+   ],
+   "source": [
+    "def kth_last(ll, k):\n",
+    "    values = []\n",
+    "    if ll.head is None:\n",
+    "        return \"list does not exist\"\n",
+    "    else:\n",
+    "        currentnode = ll.head\n",
+    "        while currentnode is not None:\n",
+    "            values.append(currentnode)\n",
+    "            currentnode = currentnode.next\n",
+    "    len_ = len(values)\n",
+    "    for i, j in enumerate(values[::-1]):\n",
+    "        if k-1 == i:\n",
+    "            break\n",
+    "    return f\"Node {len_-i} with value {j.value} is the {k}th value from the end\"\n",
+    "ll = LinkedList()\n",
+    "ll.generate(50, 0 ,10)\n",
+    "print(ll)\n",
+    "\n",
+    "print(kth_last(ll, randint(1, 40)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
